[project]
name = "mos-test-tool"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
mos-test = "mos_test.cli:app"
